Replace Collectors.toList() with toList(), thanks Java 16