@@ -8,7 +8,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
@@ -102,7 +101,7 @@ public class BeeRegistry {
 
         return mutations.stream()
                 .filter(m -> m.getSecondParent().equals(otherParentUid))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
