@@ -8,7 +8,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.annotation.Nonnull;
@@ -145,7 +144,7 @@ public class AlleleRegistry {
         }
 
         if (stream != null) {
-            return stream.map(mapFn).collect(Collectors.toList());
+            return stream.map(mapFn).toList();
         }
 
         return Collections.emptyList();
